vlib/v/checker/tests/unsafe_assign_none_err.vv
fn f() {
	mut s := unsafe { none }
	println(s)
}

f()
